【add】回答状況をアイコンで可視化する機能を実装

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10902,4 +10902,8 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+
+  .answer-icon{
+    display:inline-flex !important;
+  }
 }
