【fix】解決策詳細画面のUI改善

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10902,4 +10902,15 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+
+  .card-solution-detail {
+    width:70%;
+  }
+
+  @media (max-width:500px) {
+    .card-solution-detail {
+      width:100%;
+    }
+    
+  }
 }
